// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Jumbotron checkGrammar 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron checkGrammar 2`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron checkGrammar 3`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron checkGrammar 4`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron checkHighlight 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron checkHighlight 2`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron checkHighlight 3`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron checkHighlight 4`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron checkSpaces 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron checkSpaces 2`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron checkSpaces 3`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron checkSpaces 4`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron className 1`] = `
<div
  className="uu5-bricks-jumbotron my-classname uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 1`] = `
<div
  className="color-schema-default uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 2`] = `
<div
  className="color-schema-red uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 3`] = `
<div
  className="color-schema-red uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 4`] = `
<div
  className="color-schema-red-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 5`] = `
<div
  className="color-schema-red-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 6`] = `
<div
  className="color-schema-green uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 7`] = `
<div
  className="color-schema-green uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 8`] = `
<div
  className="color-schema-green-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 9`] = `
<div
  className="color-schema-green-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 10`] = `
<div
  className="color-schema-yellow uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 11`] = `
<div
  className="color-schema-yellow uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 12`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 13`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 14`] = `
<div
  className="color-schema-purple uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 15`] = `
<div
  className="color-schema-purple uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 16`] = `
<div
  className="color-schema-purple-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 17`] = `
<div
  className="color-schema-purple-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 18`] = `
<div
  className="color-schema-brown uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 19`] = `
<div
  className="color-schema-brown uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 20`] = `
<div
  className="color-schema-brown-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 21`] = `
<div
  className="color-schema-brown-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 22`] = `
<div
  className="color-schema-orange uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 23`] = `
<div
  className="color-schema-orange uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 24`] = `
<div
  className="color-schema-orange-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 25`] = `
<div
  className="color-schema-orange-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 26`] = `
<div
  className="color-schema-cyan uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 27`] = `
<div
  className="color-schema-cyan uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 28`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 29`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 30`] = `
<div
  className="color-schema-grey uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 31`] = `
<div
  className="color-schema-grey uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 32`] = `
<div
  className="color-schema-grey-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 33`] = `
<div
  className="color-schema-grey-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 34`] = `
<div
  className="color-schema-pink uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 35`] = `
<div
  className="color-schema-pink uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 36`] = `
<div
  className="color-schema-pink-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 37`] = `
<div
  className="color-schema-pink-rich uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron colorSchema 38`] = `
<div
  className="color-schema-pink uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron content 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Jumbotron content 2`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Jumbotron content 3`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Jumbotron content 4`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Jumbotron controlled 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron controlled 2`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron controlled 3`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron controlled 4`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron default props 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron disabled 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-disabled uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Jumbotron disabled 2`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron disabled 3`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron disabled 4`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-disabled uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Jumbotron docKit examples UU5.Bricks.Jumbotron example01 1`] = `
<div
  className="color-schema-cyan uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="idJUMBO"
  style={Object {}}
  title={null}
>
  <Header
    className={null}
    colorSchema={null}
    content="Header"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="idHEADER"
    ignoreInnerHTML={false}
    key="idHEADER"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.Jumbotron dynamic 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron dynamic 2`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron dynamic 3`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron dynamic 4`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron hidden 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-hidden uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron hidden 2`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron hidden 3`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron hidden 4`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-hidden uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron id 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron ignoreHTML 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron ignoreHTML 2`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron ignoreHTML 3`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron ignoreHTML 4`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron mainAttrs 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron name 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron nestingLevel 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron nestingLevel 2`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron nestingLevel 3`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron nestingLevel 4`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron nestingLevel 5`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron nestingLevel 6`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron nestingLevel 7`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron nestingLevel 8`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron nestingLevel 9`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron nestingLevel 10`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron nestingLevel 11`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron nestingLevel 12`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron nestingLevel 13`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron nestingLevel 14`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron nestingLevel 15`] = `""`;

exports[`UU5.Bricks.Jumbotron nestingLevel 16`] = `""`;

exports[`UU5.Bricks.Jumbotron nestingLevel 17`] = `""`;

exports[`UU5.Bricks.Jumbotron nestingLevel 18`] = `""`;

exports[`UU5.Bricks.Jumbotron nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Jumbotron nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Jumbotron noIndex 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-noindex uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron noIndex 2`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron noIndex 3`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron noIndex 4`] = `
<div
  className="uu5-bricks-jumbotron uu5-noindex uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron pureRender 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron pureRender 2`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron pureRender 3`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron pureRender 4`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron selected 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-selected uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron selected 2`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron selected 3`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron selected 4`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-selected uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron style 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron style 2`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron style 3`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron style 4`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron textCorrector 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron textCorrector 2`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron textCorrector 3`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron textCorrector 4`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Jumbotron tooltip 1`] = `
<div
  className="uu5-bricks-jumbotron uu5-common-bg-style-filled uu5-bricks-jumbotron-default"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
